updated home page and NFT page update

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="A metaverse on the moon."
+      content="A home of intelligent owls."
       />
       <!-- content="Grise Token features the best-in-class AI price prediction platform for its Stakers and NFT holders." -->
     <meta
@@ -16,26 +16,26 @@
     />
     <meta
       property="og:title"
-      content="Beyondowls - A metaverse on moon."
+      content="Beyondowls - A home of intelligent owls."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://grise.finance/" />
     <meta
       property="og:description"
-      content="A metaverse on the moon."
+      content="A home of intelligent owls."
       />
       <!-- content="Grise Token features the best-in-class AI price prediction platform for its Stakers and NFT holders." -->
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:site_name" content="GRISE" />
+    <meta property="og:site_name" content="Beyond owl platform" />
     <meta property="og:url" content="https://grise.finance/" />
     <meta
       property="twitter:title"
-      content="Beyondowls - A metaverse on moon."
+      content="Beyondowls - A home of intelligent owls."
     />
     <meta
       property="twitter:description"
-      content="A metaverse on the moon."
+      content="A home of intelligent owls."
       />
       <!-- content="Grise Token features the best-in-class AI price prediction platform for its Stakers and NFT holders." -->
     <meta property="twitter:site" content="https://grise.finance/" />
@@ -53,7 +53,7 @@
     work correctly both with client-side routing and a non-root public URL.
     Learn how to configure a non-root public URL by running npm run build.
   -->
-    <title>Beyond owls - A metaverse on moon</title>
+    <title>Beyond owls - A home of intelligent owls.</title>
     <base href="./" />
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
